--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                            <a href="#skills" class="nav_link"><i class='bx bx-book'></i></a> 
                         </li>
                         <li class="nav_item">
-                           <a href="#work" class="nav_link"><i class='bx bxl-graphql'></i></a> 
+                           <a href="#work" class="nav_link"><i class='bx bx-network-chart'></i></a> 
                         </li>
                         <li class="nav_item">
                            <a href="#contact" class="nav_link"><i class='bx bx-message-square-detail'></i></a> 
