--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="home_data">
                         <span class="home_greeting">Hello, We are</span>
                         <h1 class="home_name">Agroniceye</h1>
-                        <h3 class="home_education">Cognition & Coding</h3>
+                        <h3 class="home_education">AI-Powered Solutions for Thriving Crops!</h3>
                         <img src="img/87724bcb0a069efa0459058d3ed6663c (1)-PhotoRoom (2).png" align="right" style="margin-top: -18rem; margin-right: -8rem;">
                         <div class="home_buttons">
                             <a download="" href="pdf/Agroniceye.pdf" class="button button--ghost">
