--- a/index.html
+++ b/index.html
@@ -65,15 +65,14 @@
                         </div>
                     </div>
                     <div class="home_handle">
-                      <img src="img/proto1.jpg" alt="" class="home_img">  
+                      <img src="img/" alt="" class="home_img">  
                     </div>
                     <div class="home_social">
-                        <a href="" target="_blank" class="home_social-link">
+                        <a href="https://www.linkedin.com/in/agroniceye/" target="_blank" class="home_social-link">
                            <i class='bx bxl-linkedin-square'></i> 
                         </a>
-                         <a href="" target="_blank" class="home_social-link">
-                            <i class='bx bxl-behance'></i>
-                        </a>
+                        <a href="https://www.facebook.com/profile.php?id=61557031119706" target="_blank" class="home_social-link">
+                            <i class='bx bxl-facebook'></i></a>
                          <a href="" target="_blank" class="home_social-link">
                             <i class='bx bxl-dribbble'></i>
                         </a>
