--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <span class="home_greeting">Hello, We are</span>
                         <h1 class="home_name">Agroniceye</h1>
                         <h3 class="home_education">AI-Powered Solutions for Thriving Crops!</h3>
-                        <img src="img/vazi.png" align="right" style="margin-top: -18rem; margin-right: -8rem;">
+                        <img src="" align="right" style="margin-top: -18rem; margin-right: -8rem;">
                         <div class="home_buttons">
                             <a download="" href="pdf/Agroniceye.pdf" class="button button--ghost">
                                 Download 
