--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                                  <i class='bx bx-mail-send contact_card-icon' ></i>
                                  <h3 class="contact_card-title"> Email</h3>
                                  <span class="contact_card-data" style="font-size: small;"></span>
-                                 <a href="mailto:examplemail@correo.com" target="_blank" class="contact_button">
+                                 <a href="mailto:agroniceye@gmail.com" target="_blank" class="contact_button">
                                    Write me <i class='bx bx-right-arrow-alt contact_button-icon' ></i>
                                </a>
                            </div> 
@@ -481,7 +481,7 @@
                                 <i class='bx bxl-messenger contact_card-icon' ></i>
                                 <h3 class="contact_card-title">Messenger</h3>
                                 <span class="contact_card-data"></span>
-                                <a href="https://m.me/mariam.svimonishvili.33" target="_blank" class="contact_button">
+                                <a href="https://www.facebook.com/profile.php?id=61557031119706" target="_blank" class="contact_button">
                                    Write me <i class='bx bx-right-arrow-alt contact_button-icon' ></i>
                                </a>
                            </div> 
